Platos detallados, entre otras

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -27,3 +27,4 @@ footer #gplus:after{content:"\e604";font-family:iconos;color:#f00}
 #gplus:after{content:"\e604";font-family:iconos;color:#f00;font-size:20px}
 #selectP{background-color:rgba(255,89,0,0.8);color:#fff}
 .img-thumbnail{width:220px;height:150px}
+#imgPlato img{width:400px;height:250px}
