--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,22 +33,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Ismael.com</a>
+              <a class="navbar-brand" href="/">Ismael en la Web</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#contact">Menú del domingo</a></li>
-                <li class="dropdown">
-                  <a href="recetas.html" class="dropdown-toggle" data-toggle="dropdown">Mis Recetas <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Pastas</a></li>
-                    <li><a href="#">Carnes</a></li>
-                    <li><a href="#">Sopas</a></li>
-                    <li><a href="#">Ensaladas</a></li>
-                   
-                  </ul>
-                </li>
+                <li><a href="{% url "recetas" "sopas" %}">Mis Recetas</a></li>
 
               </ul>
               <ul class="nav navbar-right" id ="social">
@@ -80,7 +71,7 @@
             <div class="carousel-caption">
               
               
-              <p><a class="btn btn-lg btn-primary" href="{% url "recetas" %}" role="button">MIS RECETAS</a></p>
+              <p><a class="btn btn-lg btn-primary" href="{% url "recetas" "mariscos" %}" role="button">MIS RECETAS</a></p>
             </div>
           </div>
         </div>
@@ -141,7 +132,7 @@
           <img class="img-circle" src="static/images/chupe.jpg" alt="Generic placeholder image" >
           <h2>Recetas</h2>
           <p>Mi pasión es la cocina, y ver como las personas agradecen con un "QUE BUENISIMO TE QUEDÓ ISMAEL" es lo que me sigue moviendo y mucha gente me dice "..y que le echaste que quedó tan bueno" por ende he decidido compartir mis recetas</p>
-          <p><a class="btn btn-default" href="#" role="button">Ver mis recetas &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url "recetas" "pastas" %}" role="button">Ver mis recetas &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="static/images/capressa.jpg" alt="Generic placeholder image">
