Registro de email

--- a/app/static/css/main.styl
+++ b/app/static/css/main.styl
@@ -96,7 +96,12 @@ footer
 		#registrarse
 			position relative
 			top 10px
-
+		#alertReg
+			position absolute
+			top 100px
+			right 20px
+			width 300px
+			
 
 #containerMedio
 	background-image url('../images/purty_wood.png')
@@ -158,7 +163,10 @@ footer
 	width 220px
 	height 150px
 
-
+#tipo
+	float right
+	background-color: rgba(255, 89, 0, 0.8);
+	padding 0.2em
 
 #imgPlato
 	img
