--- a/app/templates/mostrartodos.html
+++ b/app/templates/mostrartodos.html
@@ -9,8 +9,10 @@
             
             <h1>Mis Recetas</h1>
             <p>En esta sección quiero compartir con ustedes todos los ingredientes de mis platos, para que a los tengan en cuenta a la hora de hacer sus pedidos</p>
+            <h2 id="tipo"><strong>{{tipo.nombre}}</strong></h2>
+
           </div>
-          <h2>{{tipo.nombre}}</h2>
+          
           <div class="row" id="platos_recetas_sopas">
             {% for p in platos %}
 
