--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -15,6 +15,7 @@ footer #gplus:after{content:"\e604";font-family:iconos;color:#f00}
 #email input{width:200px;position:relative;right:60px}
 #email #registro{display:inline-block;padding:.5em;position:relative;left:50px;}
 #email #registro #registrarse{position:relative;top:10px}
+#email #registro #alertReg{position:absolute;top:100px;right:20px;width:300px}
 #containerMedio{background-image:url("../images/purty_wood.png");color:#000;border-radius:5px;}
 #containerMedio img{height:120px;width:120px;position:relative;top:10px;}
 #containerMedio img:hover{height:150px;width:150px}
@@ -27,4 +28,5 @@ footer #gplus:after{content:"\e604";font-family:iconos;color:#f00}
 #gplus:after{content:"\e604";font-family:iconos;color:#f00;font-size:20px}
 #selectP{background-color:rgba(255,89,0,0.8);color:#fff}
 .img-thumbnail{width:220px;height:150px}
+#tipo{float:right;background-color:rgba(255,89,0,0.8);padding:.2em}
 #imgPlato img{width:400px;height:250px}
