--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,37 @@
     <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="static/css/carousel.css" rel="stylesheet">
     <link href="static/css/main.css" rel="stylesheet">
-    
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script>
+     $(function(){
+            $('#alertReg').hide()
+            $('#registrarse').on('click', function(event){
+                event.preventDefault();
+                $('#alertReg').fadeIn("slow");
+                debugger;     
+                var email =  $('#campo_email').val();
+                $.ajax({
+                    data : {'email': email},
+                    url : 'email/',
+                    type : 'get',
+
+                });
+                $('#campo_email').val('');
+                        
+
+            });
+            /*$('.busqueda').hide()
+            
+            $('.bus').on('click', function(ev){
+                $('.busqueda').show()
+
+            });*/
+
+             
+
+    });
+
+    </script>
 
     
     <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
@@ -112,9 +142,13 @@
        <div class="form-group" id="registro">
         <form action="">
           
-          <input type="email" class="form-control" id="ejemplo_email_3"
+          <input type="email" class="form-control" id="campo_email"
                placeholder="@ Email" >
           <input type="submit" class="btn btn-success" value="Registrarse" id="registrarse">
+          <div id ="alertReg" class="alert alert-success alert-dismissable">
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+              <strong>Gracias por registrarte, estaremos en contacto</strong> 
+          </div>
         </form>
            
       </div>
@@ -225,9 +259,9 @@
                     </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
     
-    <script src="http://code.jquery.com/jquery.js"></script>
+    
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/holder.js"></script>
-    <script src="static/jquery.modal.js" charset="utf-8"></script>
+   
   </body>
 </html>
