--- a/app/static/css/main.styl
+++ b/app/static/css/main.styl
@@ -172,3 +172,26 @@ footer
 	img
 		width 400px
 		height 250px
+
+
+
+//Estilos Menú
+#menu
+	background rgba(255, 255, 255, 0.7);
+	width 60%
+	position relative
+	left 250px
+	border-radius 5px
+	border 2px solid black
+
+#imgMenu
+	width 300px
+	height 180px
+
+
+
+@media screen and (max-width: 768px)
+
+	#menu
+		width 100%
+		left 0px
